objects/pca__PostcodeAnywhereFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>pca__Address__c</fullName>
        <label>Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Field__c</fullName>
        <label>Field</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Value__c</fullName>
        <label>Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Postcode Anywhere Fields</label>
</CustomObject>